--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ header {
 }
 .name {
   display: block;
+  margin-right: 93px;
   color: var(--accent-color);
   font-family: 'Raleway';
   font-weight: 700;
@@ -45,7 +46,6 @@ header {
   text-decoration: none;
 }
 .name-studio {
-  margin-right: 93px;
   color: #000000;
   text-decoration: none;
 }
@@ -114,6 +114,9 @@ header {
 }
 
 .banner-title {
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 0;
   margin-bottom: 30px;
   color: var(--second-accent-color);
@@ -152,17 +155,16 @@ header {
 }
 .button.secondary {
   padding: 6px 22px;
-  margin-bottom: 16px;
-  margin-right: 8px;
   background-color: var(--team-section-background-color);
   color: var(--title-color);
   font-weight: 500;
   line-height: 1.6;
   letter-spacing: 0.03em;
 }
-.button.secondary:first-child {
-  margin-left: 0;
+.filter .item:not(:last-child) {
+  margin-right: 8px;
 }
+
 .button.secondary:hover,
 .button.secondary:focus {
   background-color: var(--accent-color);
@@ -294,7 +296,10 @@ footer {
   padding-bottom: 60px;
   background-color: var(--footer-background-color);
 }
-
+.name.studio {
+  display: block;
+  margin-bottom: 20px;
+}
 .name-second {
   color: var(--second-accent-color);
 }
@@ -305,8 +310,7 @@ footer {
 }
 
 .location {
-  padding-bottom: 9px;
-  margin-top: 20px;
+  margin-bottom: 9px;
   color: var(--second-accent-color);
   font-style: normal;
   font-size: 14px;
@@ -315,10 +319,12 @@ footer {
 
 .phone,
 .mail {
-  padding-bottom: 9px;
   font-size: 14px;
   line-height: 1.7;
   text-decoration: none;
+}
+.connection .item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .phone,
@@ -339,7 +345,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 .projects {
   display: flex;
@@ -349,7 +355,6 @@ footer {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border-bottom: 1px solid #eeeeee;
 }
 .projects .item:nth-child(3n) {
   margin-right: 0;
@@ -359,6 +364,9 @@ footer {
 }
 .about-project {
   padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 .about-project .title {
   margin-top: 0;
