Добавляет правки ментора
удаляет правий маржин у лого в футере

--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,7 @@ footer {
 .name.studio {
   display: block;
   margin-bottom: 20px;
+  margin-right: 0;
 }
 .name-second {
   color: var(--second-accent-color);
